for productive use 🥳

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,35 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MarkTex</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+
+    <!--
+    <script>
+      MathJax = {
+        tex: {
+          inlineMath: [['$', '$'], ['\\(', '\\)']],
+          macros: {
+            R: "\\mathbb R",
+            Z: "\\mathbb Z",
+            N: "\\mathbb N",
+            Q: "\\mathbb Q",
+            set: ["\\{#1\\}", 1]
+          }
+        },
+        svg: {
+          fontCache: 'global'
+        },
+        options: { // disable context menu so that contenteditable works properly
+          renderActions: {
+            addMenu: [0, '', '']
+          }
+        }
+      };
+    </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
